--- a/playbooks/swarm.yml
+++ b/playbooks/swarm.yml
@@ -65,6 +65,7 @@
           run_once: true
           community.docker.docker_swarm:
             state: present
+            task_history_retention_limit: 2
           register: __swarm_init
 
         - name: Join nodes
