--- a/inventory/group_vars/swarm/vars.yml
+++ b/inventory/group_vars/swarm/vars.yml
@@ -3,6 +3,13 @@
 jellyfin_port: 8096
 mrbot_web_port: 8001
 
+docker_swarm_role: "{{ 'Manager' if groups['swarm'] | ansible.utils.index_of('eq', inventory_hostname) < 3 else 'Worker' }}"
+docker_swarm_managers: >-
+  {%- set tmp = [] -%}
+  {%- for h in groups['swarm'] if hostvars[h].docker_swarm_role == 'Manager' -%}
+  {{- tmp.append(h) -}}
+  {%- endfor -%}
+  {{ tmp }}
 docker_registries:
   - url: "{{ gitlab_registry_external_url | regex_replace('^https?://', '') }}"
     username: "{{ vault_gitlab_token_name }}"
