--- a/inventory/group_vars/ceph/firewall.yml
+++ b/inventory/group_vars/ceph/firewall.yml
@@ -37,6 +37,10 @@ __cluster_firewall_rules:
     zone: internal
     sources: "{{ node_exporter_allow_ips }}"
 
+  - port: "{{ nvme_exporter_port }}"
+    zone: public
+    sources: "{{ node_exporter_allow_ips }}"
+
   - port: "{{ ceph_dashboard_port }}"
     zone: internal
     sources: "{{ firewall_trusted_sources }}"
