--- a/inventory/group_vars/ceph/vars.yml
+++ b/inventory/group_vars/ceph/vars.yml
@@ -16,3 +16,8 @@ dnf_automatic_excludes:
   - "container*"
 
 my_user_pass: "{{ vault_my_user_pass }}"
+
+nvme_exporter_port: 9998
+nvme_exporter_listen_address: "{{ host_ips.vm }}:{{ nvme_exporter_port }}"
+
+prometheus_nvme_targets: ["{{ nvme_exporter_listen_address }}"]
