--- a/inventory/group_vars/prom/prometheus.yml
+++ b/inventory/group_vars/prom/prometheus.yml
@@ -74,6 +74,18 @@ __prom_nginx_configs: >-
   {%- endfor -%}
   {{ tmp }}
 
+__prom_nvme_configs: >-
+  {%- set tmp = [] -%}
+  {%- for h in groups[__prom_auto_target_group] | sort if hostvars[h].prometheus_nvme_targets | default([]) -%}
+  {{- tmp.append(
+    {
+      "targets": hostvars[h].prometheus_nvme_targets,
+      "labels": hostvars[h].prometheus_node_labels,
+    }
+  ) -}}
+  {%- endfor -%}
+  {{ tmp }}
+
 __prom_blackbox_icmp_targets: >-
   {%- set tmp = [] -%}
   {%- for h in groups[__prom_auto_target_group] if hostvars[h].prometheus_blackbox_icmp_targets | default([]) -%}
@@ -186,6 +198,9 @@ __extra_prometheus_scrape_configs:
     honor_labels: true
     static_configs:
       - targets: "{{ groups['ceph'] | map('extract', hostvars, 'host_ips') | map(attribute='mgmt') | map('regex_replace', '$', ':' + (ceph_exporter_port | string)) | list }}"
+
+  - job_name: "nvme"
+    static_configs: "{{ __prom_nvme_configs }}"
 
   - job_name: "pushgateway"
     static_configs:
