--- a/inventory/group_vars/gitrun/libvirt.yml
+++ b/inventory/group_vars/gitrun/libvirt.yml
@@ -3,9 +3,7 @@
 vm_cpus: 4
 vm_mem: 4096
 
-vm_template: "rocky8_packer.raw"
-vm_os_id: "http://rockylinux.org/rocky/8"
+vm_template: "rocky9_networkd_packer.raw"
+vm_os_id: "http://rockylinux.org/rocky/9"
 
-vm_root_size: "10G"
-vm_data_disks:
-  - "20G"
+vm_root_size: "50G"
