--- a/inventory/group_vars/swarm/libvirt.yml
+++ b/inventory/group_vars/swarm/libvirt.yml
@@ -1,5 +1,6 @@
 ---
 
+vm_mem: 8192
 vm_root_size: "50G"
 # Sort to ensure it's consistent between runs
 __vm_host_list: "{{ ['theia'] + (groups['thinkcentre'] | sort) }}"
