Update xorg libinput config
* Remove configuration using xinput
* Change xorg_conf_d to a list of dicts
* Add group and host vars for xorg config

--- a/inventory/host_vars/desktop/xorg.yml
+++ b/inventory/host_vars/desktop/xorg.yml
@@ -1,11 +1,12 @@
 ---
 
-xorg_conf_d:
-  "20-nvidia.conf": |
-    Section "Device"
+__xorg_conf_d_host:
+  - name: "20-nvidia"
+    content: |
+      Section "Device"
         Identifier     "Device0"
         Driver         "nvidia"
         VendorName     "NVIDIA Corporation"
         BoardName      "GeForce RTX 3080"
         Option         "Coolbits" "28"
-    EndSection
+      EndSection
