--- a/roles/xorg/defaults/main.yml
+++ b/roles/xorg/defaults/main.yml
@@ -17,15 +17,16 @@ xorg_packages:
   - xorg-xset
   - xorgproto
 
-xorg_conf_d: {}
+xorg_conf_d: []
 # xorg_conf_d:
-#   "10-monitor": |
-#     Section "Monitor"
-#         Identifier "eDP-1"
-#         Option "DPMS" "true"
-#     EndSection
-#     Section "ServerFlags"
-#         Option "StandbyTime" "10"
-#         Option "SuspendTime" "10"
-#         Option "OffTime" "10"
-#     EndSection
+#   - name: "10-monitor"
+#     content: |
+#       Section "Monitor"
+#           Identifier "eDP-1"
+#           Option "DPMS" "true"
+#       EndSection
+#       Section "ServerFlags"
+#           Option "StandbyTime" "10"
+#           Option "SuspendTime" "10"
+#           Option "OffTime" "10"
+#       EndSection
