--- a/playbooks/create-libvirt-vm.yml
+++ b/playbooks/create-libvirt-vm.yml
@@ -4,6 +4,7 @@
 - name: Create KVM VMs
   hosts: libvirt
   gather_facts: false
+  strategy: free
   pre_tasks:
     - name: Gather host facts
       delegate_to: "{{ vm_host }}"
