--- a/playbooks/create-libvirt-vm.yml
+++ b/playbooks/create-libvirt-vm.yml
@@ -29,6 +29,19 @@
           pool: "{{ vm_disk_pool }}"
       tags: ["always"]
 
+    - name: Generate ignition
+      delegate_to: "{{ vm_host }}"
+      ansible.builtin.copy:
+        content: "{{ vm_ignition | to_json }}"
+        dest: "/mnt/ceph/libvirt/{{ inventory_hostname }}.ign"
+        owner: root
+        group: qemu
+        mode: "0640"
+        seuser: system_u
+        setype: virt_content_t
+      when: vm_ignition | default({})
+      tags: ["always"]
+
   roles:
     - role: libvirt_vm
       delegate_to: "{{ vm_host }}"
