--- a/inventory/group_vars/k8s_cluster/vars.yml
+++ b/inventory/group_vars/k8s_cluster/vars.yml
@@ -1,8 +1,18 @@
 ---
 
+ansible_user: core
+ansible_become: true
+# Only works after kubespray boostrap
+ansible_python_interpreter: "/opt/bin/python"
+
 firewall_enabled: false
 # Monitoring running inside kubernetes
 node_exporter_installed: false
 # Skip for now
 prometheus_blackbox_icmp_targets: []
 prometheus_node_targets: []
+
+firewall_frontend: "none"
+firewall_install: false
+promtail_bin_path: /opt/bin/promtail
+nfs_idmapping_configure: false
