--- a/playbooks/kube.yml
+++ b/playbooks/kube.yml
@@ -1,28 +1,83 @@
 #!/usr/bin/env -S ansible-playbook
 ---
 
+- name: Bootstrap Flatcar
+  hosts: k8s_cluster
+  gather_facts: false
+  tags: ["system"]
+  tasks:
+    - name: Run kubespray bootstrap script
+      ansible.builtin.script:
+        cmd: "{{ repo_base_dir }}/kubespray/roles/bootstrap-os/files/bootstrap.sh"
+        creates: "/opt/bin/.bootstrapped"
+      when: "'flatcar' in vm_template | lower"
+
 - name: Configure Kubernetes nodes
   gather_facts: true
   hosts: k8s_cluster
   tags: ["system"]
   tasks:
-    - name: Stop firewalld
-      systemd:
-        name: firewalld
+    - name: Check if firewall is active  # noqa command-instead-of-module
+      ansible.builtin.command: "systemctl is-active -q {{ firewall_frontend }}"
+      register: firewall_enabled
+      failed_when: false
+      changed_when: false
+      check_mode: false
+      tags: ["firewall"]
+
+    - name: Stop and disable firewall
+      ansible.builtin.systemd:
+        name: "{{ firewall_frontend }}"
         state: stopped
-      tags: ["firewalld"]
-
-    - name: Disable firewalld
-      systemd:
-        name: firewalld
         enabled: false
-      tags: ["firewalld"]
-
-    - name: Mask firewalld
-      systemd:
-        name: firewalld
         masked: true
-      tags: ["firewalld"]
+      when: firewall_enabled.rc == 0
+      tags: ["firewall"]
+
+    - name: Mask firewall
+      ansible.builtin.systemd:
+        name: "{{ firewall_frontend }}"
+        masked: true
+      when: firewall_enabled.rc == 0
+      tags: ["firewall"]
+
+    - name: Resolved workarounds
+      when: "'flatcar' not in vm_template | lower"
+      block:
+        - name: Check systemd-resolved  # noqa command-instead-of-module
+          ansible.builtin.command: systemctl is-active -q systemd-resolved
+          register: systemd_resolved_enabled
+          failed_when: false
+          changed_when: false
+          check_mode: false
+          tags: ["resolv"]
+
+        - name: Disable systemd-resolved
+          ansible.builtin.systemd:
+            name: systemd-resolved
+            state: stopped
+            enabled: false
+          when: systemd_resolved_enabled.rc == 0
+          tags: ["resolv"]
+
+        - name: Check if using resolved-stub
+          ansible.builtin.stat:
+            path: /etc/resolv.conf
+          register: __resolv
+          tags: ["resolv"]
+
+        - name: Replace with regular resolv.conf
+          ansible.builtin.copy:
+            content: |
+              {% for s in vm_default_nic.dns_servers %}
+              nameserver {{ s }}
+              {% endfor %}
+            dest: /etc/resolv.conf
+            owner: root
+            group: root
+            mode: "0644"
+          when: __resolv.stat.islnk
+          tags: ["resolv"]
 
     - name: Include common tasks
       ansible.builtin.include_tasks:
@@ -30,7 +85,7 @@
       tags: ["always"]
 
 - name: Deploy charts and manifests
-  hosts: k8s_cluster[0]
+  hosts: kube_control_plane[0]
   gather_facts: false
   pre_tasks:
     - name: Install Helm diff plugin
@@ -41,10 +96,10 @@
       tags: ["helm", "plugins"]
   vars:
     helm_repos:
-      - name: nfs-subdir-external-provisioner
-        repo_url: "https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner"
       - name: prometheus-community
         repo_url: "https://prometheus-community.github.io/helm-charts"
+      - name: ingress-nginx
+        repo_url: "https://kubernetes.github.io/ingress-nginx"
   tasks:
     - name: Run on localhost
       delegate_to: localhost
@@ -58,16 +113,14 @@
             label: "{{ item.name }}"
           tags: ["helm", "repos"]
 
-        - name: Deploy NFS provisioner
+        - name: Deploy ingress-nginx chart
           kubernetes.core.helm:
-            name: nfs-provisioner
-            chart_ref: nfs-subdir-external-provisioner/nfs-subdir-external-provisioner
-            release_namespace: kube-system
-            release_values:
-              storageClass.defaultClass: true
-              nfs.server: "{{ hostvars['theia'].host_ips.vm }}"
-              nfs.path: "/srv/kube"
-          tags: ["helm", "nfs"]
+            name: ingress-nginx
+            chart_ref: ingress-nginx/ingress-nginx
+            release_namespace: ingress-nginx
+            create_namespace: true
+            release_values: "{{ lookup('template', '{{ repo_base_dir }}/files/k8s/ingress-nginx.yml.j2') | from_yaml }}"
+          tags: ["helm", "nginx"]
 
         - name: Deploy Prometheus chart
           kubernetes.core.helm:
@@ -75,36 +128,5 @@
             chart_ref: prometheus-community/kube-prometheus-stack
             release_namespace: prometheus
             create_namespace: true
-            release_values:
-              alertmanager:
-                enabled: false
-              grafana:
-                enabled: false
-              prometheus:
-                service:
-                  type: LoadBalancer
-                  loadBalancerIP: "10.0.15.21"
-                prometheusSpec:
-                  externalLabels: {}
-                  externalUrl: "http://10.0.15.21:9090"
-                  retention: 1h
-                  storageSpec:
-                    emptyDir:
-                      sizeLimit: "512Mi"
-              prometheus-node-exporter:
-                extraArgs:
-                  - --collector.filesystem.mount-points-exclude=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/.+)($|/)
-                  - --collector.filesystem.fs-types-exclude=^(autofs|binfmt_misc|bpf|cgroup2?|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|iso9660|mqueue|nsfs|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|selinuxfs|squashfs|sysfs|tracefs)$
-                  - --collector.systemd
-                extraHostVolumeMounts:
-                  - name: systemd
-                    hostPath: /run/dbus/system_bus_socket
-                    mountPath: /var/run/dbus/system_bus_socket
-                    readOnly: true
-                    mountPropagation: None
+            release_values: "{{ lookup('template', '{{ repo_base_dir }}/files/k8s/prom.yml.j2') | from_yaml }}"
           tags: ["helm", "prometheus"]
-
-        - name: Configure nginx ingress LB
-          kubernetes.core.k8s:
-            resource_definition: "{{ lookup('template', repo_base_dir + '/files/k8s/nginx-lb.yml.j2') | from_yaml }}"
-          tags: ["nginx"]
